formatted and fix embed going off screen

--- a/src/components/Socials.css
+++ b/src/components/Socials.css
@@ -15,5 +15,5 @@
 .instagram-media {
     position: relative;
     top: 5vh;
-    left: 10vw
+    left: 10vw;
 }
